--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+src/main/resources/application-local.yml
+
 ### STS ###
 .apt_generated
 .classpath
