--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.oxo42</groupId>
+            <artifactId>stateless4j</artifactId>
+            <version>2.6.0</version>
+        </dependency>
     </dependencies>
 
     <build>
